feature #5515 fixing MSSQL server and Oracle migration script